# pg4j

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  import_old.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
data/camd/output/: import.sh
data/camd/output/edges/: acquired_point__campaign.csv  acquired_point__data_point.csv
data/camd/output/nodes/: acquired_point.csv  campaign.csv  data_point.csv  test.csv
data/camd/sql/edges/: acquired_point__campaign.sql  acquired_point__data_point.sql
data/camd/sql/nodes/: acquired_point.sql  capaign.sql  data_point.sql
data/example/sql/edges/: fom__analysis.sql  process__process_detail.sql  process_data__analysis.sql  process_detail__anneal_process_detail.sql  process_detail__eche_process_detail.sql  process_detail__print_process_detail.sql  process_detail__uvis_process_detail.sql  process_detail__xrds_process_detail.sql  process_detail__xrfs_process_detail.sql  process_detail__xtrn_process_detail.sql  sample__plate.sql  sample_process__process.sql  sample_process__process_data.sql  sample_process__sample.sql  states.sql
data/example/sql/nodes/: analysis.sql  anneal_process_details.sql  eche_process_details.sql  fom.sql  plates.sql  print_process_details.sql  process_data.sql  process_details.sql  processes.sql  sample_processes.sql  samples.sql  uvis_process_details.sql  xrds_process_details.sql  xrfs_process_details.sql  xtrn_process_details.sql
data/test/edges/: analysis__analysis_detail.sql  ancestor.sql  collection_sample.sql  jcap_analysis__jcap_experiment.sql  jcap_exp_run.sql  jcap_fom__jcap_fom_file.sql  jcap_fom_file__jcap_sub_ana.sql  jcap_loading__jcap_fom_file.sql  jcap_pattern_file__jcap_sub_ana.sql  jcap_sub_ana__jcap_analysis.sql  parent.sql  process__process_detail.sql  process_data_analysis.sql  process_detail__anneal_process_detail.sql  process_detail__eche_process_detail.sql  process_detail__print_process_detail.sql  process_detail__uvis_process_detail.sql  process_detail__xrds_process_detail.sql  process_detail__xrfs_process_detail.sql  process_detail__xtrn_process_detail.sql  process_jcap_run.sql  sample__jcap_sample_details.sql  sample_process__process.sql  sample_process__sample.sql  sample_process_process_data.sql  state.sql
data/test/nodes/: analysis.sql  analysis_detail.sql  anneal_process_detail.sql  collection.sql  eche_process_detail.sql  jcap_analysis.sql  jcap_experiment.sql  jcap_fom.sql  jcap_fom_file.sql  jcap_loading.sql  jcap_pattern_file.sql  jcap_run.sql  jcap_sample_details.sql  jcap_sub_ana.sql  phase_a.sql  phase_b.sql  phase_c.sql  print_process_detail.sql  process.sql  process_data.sql  process_detail.sql  sample.sql  sample_process.sql  state_ancestor.sql  uvis_process_detail.sql  xrds_process_detail.sql  xrfs_process_detail.sql  xtrn_process_detail.sql
docs/: configuration.md  index.md  installation.md  usage.md
docs/reference/pg4j/: classes.md  config.md  dump.md  importer.md  index.md  inputs.md  mapper.md  settings.md  sql.md  utils.md  version.md
docs/reference/pg4j/cli/: index.md  main.md  settings.md  styles.md  typer_options.md
docs/templates/: text.mako
docs_src/installation/: git_installation.sh
scripts/: publish_docs.sh
scripts/ci/: build.sh  git_version.py
src/pg4j/: __init__.py  __main__.py  classes.py  config.py  dump.py  dump_all.py  git_version  import.py  import.sh  importer.py  inputs.py  mapper.py  settings.py  sql.py  typer_options.py  utils.py  version.py
src/pg4j/cli/: main.py  settings.py  styles.py  typer_options.py
tests/: test_config.py  utils.py
tests/data/import_files/: test_config_1.yaml  test_config_2.yaml
tests/data/mapping_files/: simple_map.yaml  test.yaml
tests/data/settings/: basic.env
tests/data/settings/malformed/: bad_type_1.yaml  extra_keys_1.yaml  extra_keys_2.yaml
