[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']

[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>", "Brian Rohr <brian.rohr@modelyst.io>"]
description = "A package designed to perform etl from a postgres database to a neo4j database."
license = "Apache-2.0"
name = "pg4j"
packages = [
  {include = "pg4j", from = "src"},
]
version = "0.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = [
  "pyproject.toml:version",
  "src/pg4j/version.py",
]

[tool.poetry.dependencies]
PyYAML = "^5.4.1"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
python = ">=3.7,<4.0"
typer = "^0.4.0"
types-PyYAML = "^5.4.6"
pydantic = {version = "^1.10.7", extras = ["dotenv"]}

[tool.poetry.scripts]
pg4j = "pg4j.__main__:app"

[tool.poetry.extras]
docs = [
  "mkdocs",
  "mkdocs-autorefs",
  "pymdown-extensions",
  "mkdocs-markdownextradata-plugin",
  "mkdocs-material",
  "markdown-include",
  "mkdocstrings",
  "pdocs",
]

[tool.poetry.group.dev.dependencies]
GitPython = "^3.1.20"
black = "^21.7b0"
commitizen = "^2.42.1"
flake8 = "^3.9.2"
hypothesis = "^6.15.0"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
